@@ -1856,12 +1856,14 @@ void Actor::reduce_health
 					// SI 'tournament'?
 		    get_flag(Obj_flags::si_tournament))
 			{
+#if 0	/* Causes problems if companion is fighting on List Field */
 					// Only if one or other is in party:
 			Actor *c = gwin->get_camera_actor();
 			if (get_flag(Obj_flags::in_party) || this == c ||
 				(attacker && 
 				 (attacker->get_flag(Obj_flags::in_party) ||
 							attacker == c)))
+#endif
 				gwin->get_usecode()->call_usecode(
 					get_usecode(), this, 
 							Usecode_machine::died);
